Minor display tweaks

--- a/prepare-tx.html
+++ b/prepare-tx.html
@@ -22,8 +22,9 @@
 		<input type="button" id="btn_recommend" value="Recommend" />
 
 		<br />
+		<input type="text" id="unsigned_tx" placeholder='Click "Prepare" to get unsigned transaction to show up here' readonly />
 		<input type="button" id="btn_prepare" value="Prepare" />
-		<input type="text" id="unsigned_tx" placeholder="" readonly />
+
 		<br />
 		<input type="text" id="signed_tx" placeholder="Signed transaction" />
 		<input type="button" id="btn_send" value="Send" />
